--- a/templates/scr/chart_GMB.html
+++ b/templates/scr/chart_GMB.html
@@ -58,7 +58,7 @@
         options: {
         title: {
             display: true,
-            text: '{{store}}:{{media}}'
+            text: '{{store}}:Google My Business'
             },
             scales: {
                     yAxes: [{
