--- a/templates/scr/index.html
+++ b/templates/scr/index.html
@@ -144,9 +144,11 @@
 
             {% endblock content %}
 
-
-            <a href="{% url 'scraping:admin' %}" class="function-btn3"><button>管理画面</button></a>
-
+<center>
+    <a href="{% url 'scraping:index' %}" class="function-btn3"><button>TOP</button></a>
+    <a href="{% url 'scraping:admin' %}" class="function-btn3"><button>管理画面</button></a>
+</center>
+    
 </body>
 
 </html>
