--- a/templates/scr/store.html
+++ b/templates/scr/store.html
@@ -65,6 +65,7 @@
                             </select>
                             <input type="submit">
                         </form>
+                        <a href="{% url 'scraping:chart_weekly' store=store media='gn' %}">週間</a>
                     </div>
                     <div class="full">
                     </div>
@@ -95,6 +96,7 @@
                             </select>
                             <input type="submit">
                         </form>
+                        <a href="{% url 'scraping:chart_weekly' store=store media='hp' %}">週間</a>
                     </div>
                     <div class="full">
                     </div>
@@ -124,6 +126,7 @@
                             </select>
                             <input type="submit">
                         </form>
+                        <a href="{% url 'scraping:chart_weekly' store=store media='tb' %}">週間</a>
                     </div>
                     <div class="full">
                     </div>
