--- a/templates/scr/dev.html
+++ b/templates/scr/dev.html
@@ -18,11 +18,17 @@
         <label><input type="checkbox" name="wanaichi" value="wanaichi">罠一目</label>
         <label><input type="checkbox" name="wananakame" value="wananakame">罠中目黒</label>
         <select name="start_year">
+            {% if start_year %}
+            <option value="{{start_year}}">{{start_year}}</option>
+            {% endif %}
             <option value="2021">2021年</option>
             <option value="2020">2020年</option>
             <option value="2019">2019年</option>
         </select>
         <select name="start_month">
+            {% if start_month %}
+            <option value="{{start_month}}">{{start_month}}</option>
+            {% endif %}
             <option value="12">12月</option>
             <option value="11">11月</option>
             <option value="10">10月</option>
@@ -37,11 +43,17 @@
             <option value="01">1月</option>
         </select>から
         <select name="end_year">
+            {% if end_year %}
+            <option value="{{end_year}}">{{end_year}}</option>
+            {% endif %}
             <option value="2021">2021年</option>
             <option value="2020">2020年</option>
             <option value="2019">2019年</option>
         </select>
         <select name="end_month">
+            {% if end_month %}
+            <option value="{{end_month}}">{{end_month}}</option>
+            {% endif %}
             <option value="12">12月</option>
             <option value="11">11月</option>
             <option value="10">10月</option>
@@ -67,11 +79,17 @@
         <label><input type="checkbox" name="wanaichi" value="wanaichi">罠一目</label>
         <label><input type="checkbox" name="wananakame" value="wananakame">罠中目黒</label>
         <select name="start_year">
+            {% if start_year %}
+            <option value="{{start_year}}">{{start_year}}</option>
+            {% endif %}
             <option value="2021">2021年</option>
             <option value="2020">2020年</option>
             <option value="2019">2019年</option>
         </select>
         <select name="start_month">
+            {% if start_month %}
+            <option value="{{start_month}}">{{start_month}}</option>
+            {% endif %}
             <option value="12">12月</option>
             <option value="11">11月</option>
             <option value="10">10月</option>
@@ -86,11 +104,17 @@
             <option value="01">1月</option>
         </select>から
         <select name="end_year">
+            {% if end_year %}
+            <option value="{{end_year}}">{{end_year}}</option>
+            {% endif %}
             <option value="2021">2021年</option>
             <option value="2020">2020年</option>
             <option value="2019">2019年</option>
         </select>
         <select name="end_month">
+            {% if end_month %}
+            <option value="{{end_month}}">{{end_month}}</option>
+            {% endif %}
             <option value="12">12月</option>
             <option value="11">11月</option>
             <option value="10">10月</option>
@@ -118,11 +142,17 @@
         <label><input type="checkbox" name="wanaichi" value="wanaichi">罠一目</label>
         <label><input type="checkbox" name="wananakame" value="wananakame">罠中目黒</label>
         <select name="start_year">
+            {% if start_year %}
+            <option value="{{start_year}}">{{start_year}}</option>
+            {% endif %}
             <option value="2021">2021年</option>
             <option value="2020">2020年</option>
             <option value="2019">2019年</option>
         </select>
         <select name="start_month">
+            {% if start_month %}
+            <option value="{{start_month}}">{{start_month}}</option>
+            {% endif %}
             <option value="12">12月</option>
             <option value="11">11月</option>
             <option value="10">10月</option>
@@ -137,11 +167,17 @@
             <option value="01">1月</option>
         </select>から
         <select name="end_year">
+            {% if end_year %}
+            <option value="{{end_year}}">{{end_year}}</option>
+            {% endif %}
             <option value="2021">2021年</option>
             <option value="2020">2020年</option>
             <option value="2019">2019年</option>
         </select>
         <select name="end_month">
+            {% if end_month %}
+            <option value="{{end_month}}">{{end_month}}</option>
+            {% endif %}
             <option value="12">12月</option>
             <option value="11">11月</option>
             <option value="10">10月</option>
@@ -156,6 +192,10 @@
             <option value="01">1月</option>
         </select>
         <button type="submit" class="btn btn-dark">送信</button>
+    </form>
+
+    <form action="{% url 'scraping:latest_all' %}">
+        <input type="submit" value="ぜんぶ">
     </form>
 
 
