--- a/templates/scr/chart_GMB.html
+++ b/templates/scr/chart_GMB.html
@@ -2,6 +2,61 @@
 {% load static %}
 
 
+{% block head %}
+<header class="top-header">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="logo_main">
+                    <!-- <a href="index.html"> -->
+                    <h2>Web媒体データ取得</h2>
+                    <!-- </a> -->
+                </div>
+            </div>
+            <form action="{% url 'scraping:chart' store=store media=media %}" method="GET">
+                <input type="submit" name="move" value='before'>
+                <select name="q">
+                    <option value="{{date}}">{{date}}</option>
+                </select>
+                <input type="submit" name="move" value='after'>
+            </form>
+
+            <div class="storebtn storebtn1">
+                <form action="{% url 'scraping:chart' store='fes' media=media %}" method="GET">
+                    <input type="submit" value="FES">
+                    <input type="hidden" name='date'  value="{{date}}">
+                </form>
+            </div>
+            <div class="storebtn">
+                <form action="{% url 'scraping:chart' store='garage' media=media %}" method="GET">
+                    <input type="submit" value="Garage">
+                    <input type="hidden" name='date'  value="{{date}}">
+                </form>
+            </div>
+            <div class="storebtn">
+                <form action="{% url 'scraping:chart' store='tourou' media=media %}" method="GET">
+                    <input type="submit" value="灯篭">
+                    <input type="hidden" name='date'  value="{{date}}">
+                </form>
+            </div>
+            <div class="storebtn">
+                <form action="{% url 'scraping:chart' store='wanaichi' media=media %}" method="GET">
+                    <input type="submit" value="罠一目">
+                    <input type="hidden" name='date'  value="{{date}}">
+                </form>
+            </div>
+            <div class="storebtn">
+                <form action="{% url 'scraping:chart' store='wananakame' media=media %}" method="GET">
+                    <input type="submit" value="罠中目">
+                    <input type="hidden" name='date'  value="{{date}}">
+                </form>
+            </div>
+
+
+        </div>
+    </div>
+</header>
+{% endblock head %}
 
 {% block content %}
 
